[package]
name = "advent-of-code-2024"
version = "0.19.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
regex = "1.10"
petgraph="0.6"
clap = { version = "4", features = ["derive"] }
itertools = "0.12.0"
strum = "0.25.0"
derive_more = "0.99.17"
winnow = "0.5.28"
num = { version = "0.4.1", features = ["num-bigint"] }
mapgrid = { version = "0.2.0", path = "mapgrid" }
rayon = "1.8.0"
memoize = "0.4.2"
range_split = { git = "https://github.com/alexjago/range-split", version = "0.1.0" }
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "3.0.2"

[workspace]
members = ["day-*", "template", "mapgrid"]


[[bin]]
name = "today"
path = "day-19/src/main.rs"


[profile.dev.package."*"]
debug = false
opt-level = 3
