[package]
name = "day-20"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
nom = "7.1.3"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
mapgrid = { version = "0.2.0", path = "../mapgrid" }
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "3.0.2"
